--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,15 @@
 FROM node:18-alpine
 
-WORKDIR /app
+WORKDIR /src
 
-COPY package.json ./
+COPY package*.json ./
 
 RUN npm install
 
 COPY . .
+
+ENV PORT=8080
+
+EXPOSE 8080
 
 CMD ["npm", "run", "dev"]
