--- a/compose.yaml
+++ b/compose.yaml
@@ -1,30 +1,30 @@
 services:
-  # frontend:
-  #   container_name: frontend
-  #   build: ./frontend/
-  #   ports:
-  #     - 8088:8088
-  #   environment:
-  #     - NEXT_TELEMETRY_DISABLED=1
-  #     - NODE_ENV=development
-  #   depends_on:
-  #     - backend
-  #   volumes:
-  #     - ./frontend:/app
-  #     - /app/node_modules
-  #     - /app/.next
+  frontend:
+    container_name: frontend
+    build: ./frontend/
+    ports:
+      - 8088:8088
+    environment:
+      - NEXT_TELEMETRY_DISABLED=1
+      - NODE_ENV=development
+    depends_on:
+      - backend
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+      - /app/.next
 
-  # backend:
-  #   container_name: backend
-  #   build: ./backend/
-  #   restart: always
-  #   ports:
-  #     - 9099:9099
-  #   environment:
-  #     - RUST_BACKTRACE=1
-  #     - DATABASE_URL=postgres://niooi:abcde@db:5432/postgres
-  #   depends_on:
-  #     - db
+  backend:
+    container_name: backend
+    build: ./backend/
+    restart: always
+    ports:
+      - 9099:9099
+    environment:
+      - RUST_BACKTRACE=1
+      - DATABASE_URL=postgres://niooi:abcde@db:5432/postgres
+    depends_on:
+      - db
 
   db:
     container_name: db
@@ -32,6 +32,7 @@ services:
     restart: always
     environment:
       POSTGRES_USER: niooi
+      # ur a weirdo
       POSTGRES_PASSWORD: abcde
       POSTGRES_DB: postgres
     ports:
