--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,8 +8,12 @@ RUN npm install
 
 COPY . .
 
+RUN npm run build
+
+RUN npm prune --production
+
 ENV PORT=8080
 
 EXPOSE 8080
 
-CMD ["npm", "run", "dev"]
+CMD ["npm", "run", "start"]
