--- a/backend/main-api/Cargo.toml
+++ b/backend/main-api/Cargo.toml
@@ -15,6 +15,7 @@ serde = {version = "1", features = ["derive"]}
 axum = {version = "0.7.3", features = ["macros"]}
 tower-http = { version = "0.5.0", features = ["fs"] }
 tower-cookies = "0.10.0"
+sqlx = {version = "0.7.3", features = ["postgres"]}
 
 [dev-dependencies]
 httpc-test = "0.1.1"
