--- a/backend/main-api/Cargo.toml
+++ b/backend/main-api/Cargo.toml
@@ -16,6 +16,7 @@ axum = {version = "0.7.3", features = ["macros"]}
 tower-http = { version = "0.5.0", features = ["fs"] }
 tower-cookies = "0.10.0"
 sqlx = {version = "0.7.3", features = ["postgres"]}
+lazy-regex = "3.1.0"
 
 [dev-dependencies]
 httpc-test = "0.1.1"
