--- a/compose.yaml
+++ b/compose.yaml
@@ -22,7 +22,7 @@ services:
       - 9099:9099
     environment:
       - RUST_BACKTRACE=1
-      - DATABASE_URL=postgres://niooi:abcde@db:5432/postgres
+      #- DATABASE_URL=postgres://niooi:abcde@db:5432/postgres
     depends_on:
       - db
 
