--- a/compose.yaml
+++ b/compose.yaml
@@ -7,40 +7,26 @@ services:
     environment:
       - NEXT_TELEMETRY_DISABLED=1
       - NODE_ENV=development
-    # depends_on:
-    #   - backend
+    depends_on:
+      - backend
     volumes:
       - ./frontend:/app
       - /app/node_modules
       - /app/.next
 
-  # backend:
-  #   container_name: backend
-  #   build:
-  #     context: ./backend/
-  #     network: host
-  #   restart: always
-  #   ports:
-  #     - 9099:9099
-  #   environment:
-  #     - RUST_BACKTRACE=1
-  #     - DATABASE_URL=postgres://niooi:abcde@127.0.0.1:9432/postgres
-  #   depends_on:
-  #     - db
-
-  db:
-    container_name: db
-    image: postgres:16
+  backend:
+    container_name: backend
+    build:
+      context: ./backend/
+      network: host
     restart: always
-    environment:
-      POSTGRES_USER: niooi
-      # ur a weirdo
-      POSTGRES_PASSWORD: abcde
-      POSTGRES_DB: postgres
     ports:
-      - 0.0.0.0:9432:5432
-    volumes:
-      - pgdata:/var/lib/postgresql/data
+      - 9099:9099
+    environment:
+      - RUST_BACKTRACE=1
+      - DATABASE_URL=postgres://niooi:abcde@127.0.0.1:9432/postgres
+    depends_on:
+      - db
 
   admin:
     image: adminer
