--- a/backend/main-api/Cargo.toml
+++ b/backend/main-api/Cargo.toml
@@ -19,6 +19,9 @@ sqlx = {version = "0.7.3", features = ["postgres", "runtime-tokio", "chrono", "u
 lazy-regex = "3.1.0"
 async-trait = "0.1.77"
 strum_macros = "0.26.1"
+time = "0.3.36"
+env_logger = "0.11.5"
+log = "0.4.22"
 
 [dev-dependencies]
 httpc-test = "0.1.1"
