--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "frontend",
+  "name": "next-app-tailwind-template",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 8088",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start -H 0.0.0.0 -p 8088",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.1.0",
+    "@mantine/core": "^7.8.1",
+    "@mantine/hooks": "^7.8.1",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -17,11 +19,10 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "postcss": "^8.4.38",
+    "postcss-preset-mantine": "^1.15.0",
+    "postcss-simple-vars": "^7.0.1",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
