--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mantine/core": "^7.8.1",
     "@mantine/hooks": "^7.8.1",
+    "@mantinex/mantine-header": "^1.0.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
