--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mantine/core": "^7.8.1",
+    "@mantine/form": "^7.12.2",
     "@mantine/hooks": "^7.8.1",
     "@mantinex/mantine-header": "^1.0.2",
     "next": "14.2.3",
